<?xml version="1.0" encoding="utf-8"?>
<!--      Developers: Amritpal Singh, Gursharan Singh, Waqar Ali Saleemi, Mustafa Efiloglu-->
<!--      Group: Group 10-->
<!--      Project Name: Trippy-Trip_Planner-->
<!--      Date: 13 April, 2022-->
<!--      File Name: activity_add_trip.xml-->
<!--      Description: Layout for add activity-->





<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTripActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:background="?android:attr/windowBackground">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:id="@+id/toolbarPost">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_close"
                    android:contentDescription="@string/close_button"
                    android:id="@+id/close"/>

                <TextView
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:text="@string/add_trip"
                    android:textSize="18sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/tripName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_border"
            android:ems="10"
            android:hint="@string/trip_name"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tripLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_border"
            android:drawableLeft="@drawable/ic_location"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:gravity="center|start"
            android:text="@string/choose_location"
            app:layout_constraintEnd_toEndOf="@+id/tripName"
            app:layout_constraintStart_toStartOf="@+id/tripName"
            app:layout_constraintTop_toBottomOf="@+id/tripName" />

        <TextView
            android:id="@+id/tripDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_border"
            android:drawableLeft="@drawable/ic_calendar"
            android:gravity="center|start"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/select_date"
            app:layout_constraintEnd_toEndOf="@+id/tripLocation"
            app:layout_constraintStart_toStartOf="@+id/tripLocation"
            app:layout_constraintTop_toBottomOf="@+id/tripLocation" />

        <TextView
            android:id="@+id/tripTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_border"
            android:drawableLeft="@drawable/ic_time"
            android:gravity="center|start"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/select_start_time"
            app:layout_constraintEnd_toEndOf="@+id/tripDate"
            app:layout_constraintStart_toStartOf="@+id/tripDate"
            app:layout_constraintTop_toBottomOf="@+id/tripDate" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>